// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should change page size 1`] = `
<div
  className="dropdown pagination-items-per-page"
>
  <a
    aria-expanded="false"
    aria-haspopup="true"
    className="dropdown-toggle"
    data-toggle="dropdown"
    href="#1"
    role="button"
  >
    30 Entries
    <Icon
      iconName="caret-double-l"
    />
  </a>
  <div
    className="dropdown-menu dropdown-menu-top"
  >
    <withRouter(PageSizeItem)
      key="0_10"
      pageSize={10}
    />
    <withRouter(PageSizeItem)
      key="1_20"
      pageSize={20}
    />
    <withRouter(PageSizeItem)
      key="2_30"
      pageSize={30}
    />
    <withRouter(PageSizeItem)
      key="3_40"
      pageSize={40}
    />
  </div>
</div>
`;

exports[`Should render component 1`] = `
<div
  className="dropdown pagination-items-per-page"
>
  <a
    aria-expanded="false"
    aria-haspopup="true"
    className="dropdown-toggle"
    data-toggle="dropdown"
    href="#1"
    role="button"
  >
    10 Entries
    <Icon
      iconName="caret-double-l"
    />
  </a>
  <div
    className="dropdown-menu dropdown-menu-top"
  >
    <withRouter(PageSizeItem)
      key="0_10"
      pageSize={10}
    />
    <withRouter(PageSizeItem)
      key="1_20"
      pageSize={20}
    />
    <withRouter(PageSizeItem)
      key="2_30"
      pageSize={30}
    />
    <withRouter(PageSizeItem)
      key="3_40"
      pageSize={40}
    />
  </div>
</div>
`;

exports[`Should render with default deltas 1`] = `
<MockRouter>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <PageSizeEntries
        selectedPageSize={30}
      >
        <div
          className="dropdown pagination-items-per-page"
        >
          <a
            aria-expanded="false"
            aria-haspopup="true"
            className="dropdown-toggle"
            data-toggle="dropdown"
            href="#1"
            role="button"
          >
            30 Entries
            <Icon
              iconName="caret-double-l"
            >
              <svg
                className="lexicon-icon lexicon-icon-caret-double-l"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#caret-double-l\\" />",
                  }
                }
                data-testid="icon"
                focusable="false"
                role="presentation"
              />
            </Icon>
          </a>
          <div
            className="dropdown-menu dropdown-menu-top"
          >
            <withRouter(PageSizeItem)
              key="0_5"
              pageSize={5}
            >
              <PageSizeItem
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "match": Object {
                          "params": Object {
                            "page": 1,
                            "sort": undefined,
                          },
                        },
                        "pathname": "/processes/1/10/title%3Aasc",
                        "search": "?backPath=%2F",
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "match": Object {
                        "params": Object {
                          "page": 1,
                          "sort": undefined,
                        },
                      },
                      "pathname": "/processes/1/10/title%3Aasc",
                      "search": "?backPath=%2F",
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
                location={
                  Object {
                    "hash": "",
                    "match": Object {
                      "params": Object {
                        "page": 1,
                        "sort": undefined,
                      },
                    },
                    "pathname": "/processes/1/10/title%3Aasc",
                    "search": "?backPath=%2F",
                  }
                }
                match={
                  Object {
                    "isExact": false,
                    "params": Object {},
                    "path": "/",
                    "url": "/",
                  }
                }
                pageSize={5}
              >
                <Link
                  className="dropdown-item"
                  to={
                    Object {
                      "pathname": "/",
                      "search": "?backPath=%2F",
                    }
                  }
                >
                  <a
                    className="dropdown-item"
                    href="/?backPath=%2F"
                    onClick={[Function]}
                  >
                    5
                  </a>
                </Link>
              </PageSizeItem>
            </withRouter(PageSizeItem)>
            <withRouter(PageSizeItem)
              key="1_10"
              pageSize={10}
            >
              <PageSizeItem
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "match": Object {
                          "params": Object {
                            "page": 1,
                            "sort": undefined,
                          },
                        },
                        "pathname": "/processes/1/10/title%3Aasc",
                        "search": "?backPath=%2F",
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "match": Object {
                        "params": Object {
                          "page": 1,
                          "sort": undefined,
                        },
                      },
                      "pathname": "/processes/1/10/title%3Aasc",
                      "search": "?backPath=%2F",
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
                location={
                  Object {
                    "hash": "",
                    "match": Object {
                      "params": Object {
                        "page": 1,
                        "sort": undefined,
                      },
                    },
                    "pathname": "/processes/1/10/title%3Aasc",
                    "search": "?backPath=%2F",
                  }
                }
                match={
                  Object {
                    "isExact": false,
                    "params": Object {},
                    "path": "/",
                    "url": "/",
                  }
                }
                pageSize={10}
              >
                <Link
                  className="dropdown-item"
                  to={
                    Object {
                      "pathname": "/",
                      "search": "?backPath=%2F",
                    }
                  }
                >
                  <a
                    className="dropdown-item"
                    href="/?backPath=%2F"
                    onClick={[Function]}
                  >
                    10
                  </a>
                </Link>
              </PageSizeItem>
            </withRouter(PageSizeItem)>
            <withRouter(PageSizeItem)
              key="2_20"
              pageSize={20}
            >
              <PageSizeItem
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "match": Object {
                          "params": Object {
                            "page": 1,
                            "sort": undefined,
                          },
                        },
                        "pathname": "/processes/1/10/title%3Aasc",
                        "search": "?backPath=%2F",
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "match": Object {
                        "params": Object {
                          "page": 1,
                          "sort": undefined,
                        },
                      },
                      "pathname": "/processes/1/10/title%3Aasc",
                      "search": "?backPath=%2F",
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
                location={
                  Object {
                    "hash": "",
                    "match": Object {
                      "params": Object {
                        "page": 1,
                        "sort": undefined,
                      },
                    },
                    "pathname": "/processes/1/10/title%3Aasc",
                    "search": "?backPath=%2F",
                  }
                }
                match={
                  Object {
                    "isExact": false,
                    "params": Object {},
                    "path": "/",
                    "url": "/",
                  }
                }
                pageSize={20}
              >
                <Link
                  className="dropdown-item"
                  to={
                    Object {
                      "pathname": "/",
                      "search": "?backPath=%2F",
                    }
                  }
                >
                  <a
                    className="dropdown-item"
                    href="/?backPath=%2F"
                    onClick={[Function]}
                  >
                    20
                  </a>
                </Link>
              </PageSizeItem>
            </withRouter(PageSizeItem)>
            <withRouter(PageSizeItem)
              key="3_30"
              pageSize={30}
            >
              <PageSizeItem
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "match": Object {
                          "params": Object {
                            "page": 1,
                            "sort": undefined,
                          },
                        },
                        "pathname": "/processes/1/10/title%3Aasc",
                        "search": "?backPath=%2F",
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "match": Object {
                        "params": Object {
                          "page": 1,
                          "sort": undefined,
                        },
                      },
                      "pathname": "/processes/1/10/title%3Aasc",
                      "search": "?backPath=%2F",
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
                location={
                  Object {
                    "hash": "",
                    "match": Object {
                      "params": Object {
                        "page": 1,
                        "sort": undefined,
                      },
                    },
                    "pathname": "/processes/1/10/title%3Aasc",
                    "search": "?backPath=%2F",
                  }
                }
                match={
                  Object {
                    "isExact": false,
                    "params": Object {},
                    "path": "/",
                    "url": "/",
                  }
                }
                pageSize={30}
              >
                <Link
                  className="dropdown-item"
                  to={
                    Object {
                      "pathname": "/",
                      "search": "?backPath=%2F",
                    }
                  }
                >
                  <a
                    className="dropdown-item"
                    href="/?backPath=%2F"
                    onClick={[Function]}
                  >
                    30
                  </a>
                </Link>
              </PageSizeItem>
            </withRouter(PageSizeItem)>
            <withRouter(PageSizeItem)
              key="4_50"
              pageSize={50}
            >
              <PageSizeItem
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "match": Object {
                          "params": Object {
                            "page": 1,
                            "sort": undefined,
                          },
                        },
                        "pathname": "/processes/1/10/title%3Aasc",
                        "search": "?backPath=%2F",
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "match": Object {
                        "params": Object {
                          "page": 1,
                          "sort": undefined,
                        },
                      },
                      "pathname": "/processes/1/10/title%3Aasc",
                      "search": "?backPath=%2F",
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
                location={
                  Object {
                    "hash": "",
                    "match": Object {
                      "params": Object {
                        "page": 1,
                        "sort": undefined,
                      },
                    },
                    "pathname": "/processes/1/10/title%3Aasc",
                    "search": "?backPath=%2F",
                  }
                }
                match={
                  Object {
                    "isExact": false,
                    "params": Object {},
                    "path": "/",
                    "url": "/",
                  }
                }
                pageSize={50}
              >
                <Link
                  className="dropdown-item"
                  to={
                    Object {
                      "pathname": "/",
                      "search": "?backPath=%2F",
                    }
                  }
                >
                  <a
                    className="dropdown-item"
                    href="/?backPath=%2F"
                    onClick={[Function]}
                  >
                    50
                  </a>
                </Link>
              </PageSizeItem>
            </withRouter(PageSizeItem)>
            <withRouter(PageSizeItem)
              key="5_75"
              pageSize={75}
            >
              <PageSizeItem
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "match": Object {
                          "params": Object {
                            "page": 1,
                            "sort": undefined,
                          },
                        },
                        "pathname": "/processes/1/10/title%3Aasc",
                        "search": "?backPath=%2F",
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "match": Object {
                        "params": Object {
                          "page": 1,
                          "sort": undefined,
                        },
                      },
                      "pathname": "/processes/1/10/title%3Aasc",
                      "search": "?backPath=%2F",
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
                location={
                  Object {
                    "hash": "",
                    "match": Object {
                      "params": Object {
                        "page": 1,
                        "sort": undefined,
                      },
                    },
                    "pathname": "/processes/1/10/title%3Aasc",
                    "search": "?backPath=%2F",
                  }
                }
                match={
                  Object {
                    "isExact": false,
                    "params": Object {},
                    "path": "/",
                    "url": "/",
                  }
                }
                pageSize={75}
              >
                <Link
                  className="dropdown-item"
                  to={
                    Object {
                      "pathname": "/",
                      "search": "?backPath=%2F",
                    }
                  }
                >
                  <a
                    className="dropdown-item"
                    href="/?backPath=%2F"
                    onClick={[Function]}
                  >
                    75
                  </a>
                </Link>
              </PageSizeItem>
            </withRouter(PageSizeItem)>
          </div>
        </div>
      </PageSizeEntries>
    </Router>
  </MemoryRouter>
</MockRouter>
`;
